Test/base coverage (#64)
* fix: Fix utils issues

* test: ArkGeneratorUtils.java

* test: CodeUtilsTest.java

* test: GlobalHistoryInstitRepository.java

* test: HistoryServiceTest.java

* test: HistoryTriggerInitializer.java

* test: InstitutionChangeEventPublisher.java

* setup: Renamed SessionSettings to SessionSettingsBean

* test: InstitutionServiceTest.java

* test: PersonDetailsService

* test: Add Controller to exclusions

* test: Add Factory to exclusions

* test: Add SiamoisApplication to exclusions

* test: ThesaurusApiTest.java

* setup: Reformat pom.xml

* refactor: Remove unused class ThesaurusCollectionApi.java

* test: ConceptApiTest.java

* test: FieldServiceTest.java

* test: LangServiceTest.java

* test: PersonServiceTest.java

* test: FieldConfigurationServiceTest.java

* test: ActionUnitServiceTest.java

* test: HistoryServiceTest.java